--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,17 @@ android {
 
 dependencies {
     testImplementation deps.junit
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testCompile deps.kotlin.test
+
+
+    testImplementation deps.mockito.core
+    androidTestImplementation deps.mockito.core
+    androidTestImplementation deps.mockito.android
+
+//    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation deps.atsl.runner
+    androidTestImplementation deps.atsl.rules
 
     implementation deps.kotlin.stdlib
 
@@ -61,7 +70,7 @@ dependencies {
     implementation deps.rxjava2
     implementation deps.rxjava2_adapter
     implementation deps.rx_android
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation deps.rx_binding
 
     implementation deps.gson
     implementation deps.retrofit.runtime
@@ -70,5 +79,8 @@ dependencies {
     implementation deps.okhttp_logging_interceptor
 
     implementation deps.fresco
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
