--- a/versions.gradle
+++ b/versions.gradle
@@ -1,6 +1,11 @@
 ext.deps = [:]
 def versions = [:]
 versions.junit = "4.12"
+versions.atsl_runner = "1.0.2"
+versions.atsl_rules = "1.0.2"
+versions.mockito = "2.7.19"
+versions.mockito_all = "1.10.19"
+versions.mockito_android = "2.22.0"
 versions.android_gradle_plugin = "3.1.3"
 versions.kotlin = "1.2.71"
 versions.support = "27.1.1"
@@ -10,6 +15,7 @@ versions.room = "1.1.1"
 versions.rxjava2 = "2.1.3"
 versions.rxjava2_adapter = "2.3.0"
 versions.rx_android = "2.0.1"
+versions.rx_binding = "2.2.0"
 versions.dagger = "2.16"
 versions.retrofit = "2.3.0"
 versions.retrofit_adapter = "2.0.2"
@@ -20,6 +26,17 @@ versions.fresco = "1.10.0"
 
 def deps = [:]
 deps.junit = "junit:junit:$versions.junit"
+
+def atsl = [:]
+atsl.runner = "com.android.support.test:runner:$versions.atsl_runner"
+atsl.rules = "com.android.support.test:rules:$versions.atsl_rules"
+deps.atsl = atsl
+
+def mockito = [:]
+mockito.core = "org.mockito:mockito-core:$versions.mockito"
+mockito.all = "org.mockito:mockito-all:$versions.mockito_all"
+mockito.android = "org.mockito:mockito-android:$versions.mockito_android"
+deps.mockito = mockito
 
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 
@@ -73,6 +90,7 @@ deps.dagger = dagger
 deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
 deps.rxjava2_adapter = "com.squareup.retrofit2:adapter-rxjava2:$versions.rxjava2_adapter"
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
+deps.rx_binding = "com.jakewharton.rxbinding2:rxbinding:$versions.rx_binding"
 
 deps.databinding = "com.android.databinding:compiler:$versions.databinding"
 
